# kalman

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yml
kalman/: __init__.py
tests/: test_all.py
