[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman"
dynamic = ["version"]
description = "Most useful Kalman smoothing tools from my projects."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["Machine Learning", "Science", "Mathematics", "Experiments"]
authors = [
    {email = "jacob.stevens.haas@gmail.com", name = "Jake Stevens-Haas"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
dependencies = [
    "numpy",
    "scipy"
]
[project.optional-dependencies]
dev = [
    "black",
    "build",
    "coverage",
    "flake8",
    "flake8-comprehensions>=3.1.0",
    "flake8-builtins-unleashed",
    "flake8-pyproject",
    "pre-commit",
    "pytest>=6.2.4",
    "pre-commit",
    "pytest-cov",
    "pytest-lazy-fixture",
    "sphinx",
]

[project.urls]
homepage = "https://github.com/Jake-Stevens-Haas/kalman"

[tool.black]
line-length = 88
force-exclude = '''
    \.git
    \.mypy_cache
    \.venv
    .vscode
    version.py
    build
    dist
    env
'''
preview = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::UserWarning",
]
addopts = '-m "not slow"'
markers = ["slow"]

[tool.setuptools]
packages = ["kalman"]

[tool.setuptools_scm]
write_to = "kalman/version.py"

[tool.flake8]
exclude = [
    ".git",
    "env",
    "dist",
    "build",
    "site-packages",
    "bin",
    "__pycache__"
]
max-line-length = 88
statistics = true
count = true
verbose = 1
